fix course info retrieve from server